--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - '--entrypoints.websecure.address=:443'
       - '--certificatesresolvers.myresolver.acme.httpchallenge=true'
       - '--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web'
-      - '--certificatesresolvers.myresolver.acme.email=postmaster@sloth.run'
+      - '--certificatesresolvers.myresolver.acme.email=postmaster@erblack.com'
       - '--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
